--- a/Index.html
+++ b/Index.html
@@ -38,7 +38,24 @@
         <li>5th child</li>
     </ul>
 
+    <div class="box8">
+        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Doloribus, nihil!
+    </div>
+
+    <div class="box9">
+        POSITION ABSOLUTE: Lorem ipsum dolor sit amet, consectetur adipisicing elit. Perspiciatis, ad.
+    </div>
+
+    <div class="box10">
+        <div class="box11">
+            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Eum, ullam!
+        </div>
+        <div class="box12">
+
+        </div>
+    </div>
 
 
+    <br /><br /><br />
 </body>
 </html>
