update in CSS code

--- a/11182022_HolyGrailActivity.html
+++ b/11182022_HolyGrailActivity.html
@@ -77,13 +77,15 @@
 
                         <input type="checkbox" id="stockTip">
                         <label for="stockTip">Stock Tip</label>
-
-                        <div class="btn-container">
-                            <input type="submit" value="Submit Booking">
-                        </div>
-
+       
                 </div>
 
+                <!-- Submit Button -->
+                <div class="btn-container">
+                    <input type="submit" value="Submit Booking">
+                </div>
+
+                    
             </form>
 
 
