--- a/grid.html
+++ b/grid.html
@@ -21,13 +21,13 @@
         <div>9</div>
     </div>
 
-    <div class="img-gallery">
+    <div class="img-gallery" style="display: none;">
         <img src="https://placeimg.com/640/480/animals" alt="Photo of an animal">
         <img src="https://placeimg.com/640/480/arch" alt="Photo of a design">
         <img src="https://placeimg.com/640/480/nature" alt="Nature photo">
         <img src="https://placeimg.com/640/480/people" alt="People">
         <img src="https://placeimg.com/640/480/tech" alt="Technology">
-        <img src="https://placeimg.com/640/480/animals" alt="Animal">
+        <img src="https://s3-symbol-logo.tradingview.com/englobal-corporation--600.png" alt="ENGlobal logo">
     </div>
     <br /><br /><br /><br /><br />
 
@@ -46,7 +46,7 @@
 
         <input type="submit" value="Submit">
     </form>
-
+<br /><br /><br /><br /><br />
 
     
 </body>
