--- a/Nov 22/RWD Activity/RWD_Activity.html
+++ b/Nov 22/RWD Activity/RWD_Activity.html
@@ -24,11 +24,11 @@
         <div class="lifestyle">
             <h2>Lifestyle</h2><br />
             <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quam nobis laborum vel iusto recusandae ut exercitationem, nesciunt ipsam excepturi sequi.</p>
-        </div>
+        </div><br />
         <div class="business">
             <h2>Business</h2><br />
             <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Minus minima explicabo unde itaque tempora blanditiis nesciunt ratione rerum ducimus nostrum?</p>
-        </div>
+        </div><br />
         <div class="sports">
             <h2>Sports</h2> <br />
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Laudantium, dolorum ipsam delectus consequuntur fugit porro rerum ex unde aspernatur repellat.</p>
