--- a/Nov 22/BootStrap/Bootstrap.html
+++ b/Nov 22/BootStrap/Bootstrap.html
@@ -1,16 +1,22 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>BootStrap</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
 </head>
+
 <body>
-    
+
     <h1>Bootstrap Example</h1>
 
+
+
+    <!-- Sa container, 2 lang ang ginagamit"container-Fluid/ container-lg" -->
     <div class="container-fluid">
 
         <div class="row">
@@ -24,21 +30,55 @@
             <div class="col-1 bg-primary">
                 .col-1
             </div>
-        
+
 
             <div class="col-3 bg-success">
-            .col-3
+                .col-3
             </div>
 
             <div class="col-8 bg-warning">
-            .col8
+                .col8
             </div>
-        </div>    
+        </div>
+    </div>
+
+
+    <div class="container-lg mt-5 border border-danger">
+        <div class="row">
+            <div class="col-12 col-md-6 col-lg-3 bg-primary">col 1</div>
+            <div class="col-12 col-md-6 col-lg-3 bg-success">col 2</div>
+            <div class="col-12 col-md-6 col-lg-3 bg-warning">col 3</div>
+            <div class="col-12 col-md-6 col-lg-3 bg-danger">col 4</div>
+        </div>
+
+        <div class="container justify-content-center">
+            <div class="col-6 bg-primary m-5 p-5">col 1</div>
+        </div>
+
+        <div class="row">
+            <div class="col-1 bg-primary">col 1</div>
+            <div class="col-1 bg-body">col 2</div>
+            <div class="col-1 bg-danger">col 3</div>
+            <div class="col-1 bg-dark">col 4</div>
+            <div class="col-1 bg-gradient">col 5</div>
+            <div class="col-1 bg-info">col 6</div>
+            <div class="col-1 bg-warning">col 7</div>
+            <div class="col-1 bg-success">col 8</div>
+            <div class="col-1 bg-primary">col 9</div>
+            <div class="col-1 bg-body">col 10</div>
+            <div class="col-1 bg-warning">col 11</div>
+            <div class="col-1 bg-success">col 12</div>
+
+        </div>
+
+
     </div>
 
 
 
-
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>    
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4"
+        crossorigin="anonymous"></script>
 </body>
+
 </html>
