--- a/Nov 22/BootStrap/Bootstrap_Activity.html
+++ b/Nov 22/BootStrap/Bootstrap_Activity.html
@@ -7,9 +7,13 @@
     <title>Bootstrap Activity</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+
 </head>
 <body>
     
+    <h1>Bootstrap System</h1>
+
     <div class="container-fluid text-center border border-white">
         <div class="row">
             <div class="col-1 bg-primary">col 1</div>
