--- a/Nov 22/BootStrap/Bootstrap_Activity.html
+++ b/Nov 22/BootStrap/Bootstrap_Activity.html
@@ -14,7 +14,7 @@
     
     <h1>Bootstrap System</h1>
 
-    <div class="container-fluid text-center border border-white">
+    <div class="container-fluid-fluid-fluid text-center border border-white">
         <div class="row">
             <div class="col-1 bg-primary">col 1</div>
             <div class="col-1 bg-success">col 2</div>
@@ -31,7 +31,7 @@
         </div>
     </div>
 
-    <div class="container-fluid text-center border border-white">
+    <div class="container-fluid-fluid text-center border border-white">
 
         <div class="row">
             <div class="col-12 col-md-6 col-lg-4 bg-primary">col 1</div>
@@ -40,14 +40,14 @@
         </div>
     </div>
 
-    <div class="container-fluid text-center border border-white">
+    <div class="container-fluid-fluid text-center border border-white">
         <div class="row">
             <div class="col-4 bg-primary">col 1</div>
             <div class="col-8 bg-success">col 2</div>
         </div>
     </div>
 
-    <div class="container-fluid text-center border border-white">
+    <div class="container-fluid-fluid text-center border border-white">
 
         <div class="row">
             <div class="col-6 bg-primary">col 1</div>
