--- a/Nov 22/BootStrap/Bootstrap_Gallery.html
+++ b/Nov 22/BootStrap/Bootstrap_Gallery.html
@@ -14,7 +14,7 @@
 <body>
     <nav class="navbar navbar-expand-lg bg-dark navbar-dark ">
         <div class="container-fluid">
-            <a class="navbar-brand" href="#"><img src="https://cdn.pixabay.com/photo/2014/05/11/13/39/bird-341898__340.jpg" alt="Eagle Photo Logo" style="width: 100px; height: 80px;"></a>
+            <a class="navbar-brand" href="#"><img src="https://cdn.pixabay.com/photo/2017/02/07/11/45/eagle-2045655__340.jpg" alt="Eagle Photo Logo" style="width: 100px; height: 90px; padding: 0 5px;"></a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                 data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
                 aria-label="Toggle navigation">
