--- a/Nov_28/index.html
+++ b/Nov_28/index.html
@@ -9,9 +9,29 @@
 </head>
 <body>
     
+    <nav>
+        <ul>
+            <li>
+                <a href="#" class="active">Home</a>
+            </li>
+            <li>
+                <a href="#"> About Us</a>
+            </li>
+            <li>
+                <a href="#"> Contact Us</a>
+            </li>
 
+        </ul>
 
+    </nav>
 
+    <div class="warning">
+        <p>warning!</p>
+    </div>
+
+    <p class="message" >
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Porro, sequi.
+    </p>        
 
 </body>
 </html>
