--- a/Group4_Project_1/AboutUs_Project/Project Main/SignUp.html
+++ b/Group4_Project_1/AboutUs_Project/Project Main/SignUp.html
@@ -5,25 +5,23 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Log In</title>
+    <title>Sign Up</title>
     <link rel="stylesheet" href="./styles.css">
 </head>
 
 <body>
-    <!------------------------------------------------------------------>
-    <!----------------------------Log in codes------------------------------->
-    <!------------------------------------------------------------------>
-    <div class="container_login">
-        <h1 class="label">User Login</h1>
+    <div class="container">
+        <h1 class="label">Sign Up</h1>
         <form class="login_form" action="home.html" method="post" name="form" onsubmit="return validate()">
             <div class="font">Email or Phone</div>
             <input autocomplete="off" type="text" name="email">
             <div id="email_error">Please fill up your Email or Phone</div>
             <div class="font font2">Password</div>
             <input type="password" name="password">
-            <button type="submit">Login</button>
+            <button type="submit">Sign Up</button>
         </form>
     </div>
+
 
 
     <script src="./Index.js"></script>
