--- a/Group4_Project_1/AboutUs_Project/Project Main/SignUp.html
+++ b/Group4_Project_1/AboutUs_Project/Project Main/SignUp.html
@@ -10,7 +10,7 @@
 </head>
 
 <body>
-    <div class="container">
+    <div class="container_signup">
         <h1 class="label">Sign Up</h1>
         <form class="login_form" action="home.html" method="post" name="form" onsubmit="return validate()">
             <div class="font">Email or Phone</div>
