--- a/Group4_Project_1/AboutUs_Project/Project Main/index.html
+++ b/Group4_Project_1/AboutUs_Project/Project Main/index.html
@@ -11,10 +11,7 @@
   <title>Home</title>
 
 <body>
-  </head>
-
-  </head>
-
+  
   <body>
     <!------------------------------------------------------------------>
     <!----------------------------Nav Bar------------------------------->
@@ -22,7 +19,7 @@
     
     <nav class="navbar navbar-expand-lg bg-dark navbar-dark ">
       <div class="container-fluid">
-        <a class="navbar-brand" href="#"><img src="./Pics/KiRSCH LOGO2.jpg" alt="Eagle Photo Logo"
+        <a class="navbar-brand" href="#"><img src="./Pics/KiRSCH LOGO2.jpg" alt="KiRSCH Logo"
             style="width: 150px; height: 70px; padding: 0 5px;"></a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
           aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
